@@ -194,7 +194,6 @@ Optional Features:
   --enable-python-install   N/A
   --enable-lite             N/A
   --enable-tinygui          gui=tiny
-  --enable-smallgui         gui=small
   --enable-optipng          N/A
   --enable-lowmem           lowmem=yes
   --disable-game            (See --help documentation on choice of targets)
