@@ -69,7 +69,7 @@ opts.AddOptions(
     BoolOption('raw_sockets', 'Set to use raw receiving sockets in the multiplayer network layer rather than the SDL_net facilities', False),
     ('server_gid', 'group id of the user who runs wesnothd', ""),
     ('server_uid', 'user id of the user who runs wesnothd', ""),
-    EnumOption('gui', 'Set for GUI reductions for resolutions down to 800x480 (eeePC, Nokia 8x0) or 320x240 (PDAs)', "normal", ["normal", "small", "tiny"]),
+    EnumOption('gui', 'Set for GUI reductions for resolutions down to 320x240 (PDAs)', "normal", ["normal", "tiny"]),
     BoolOption('static', 'Set to enable static building of Wesnoth', False),
     BoolOption('strict', 'Set to strict compilation', False),
     BoolOption('static_test', 'Staticaly build against boost test (Not supported yet)', False),
@@ -274,9 +274,6 @@ if env['strict']:
 
 if env['gui'] == 'tiny':
     env.Append(CPPDEFINES = "USE_TINY_GUI")
-
-if env['gui'] == 'small':
-    env.Append(CPPDEFINES = "USE_SMALL_GUI")
 
 if env['lowmem']:
     env.Append(CPPDEFINES = "LOW_MEM")
