@@ -27,3 +27,8 @@ Building Wesnoth now requires fontconfig 2.4.2 or higher (only tested with
 requirements are added.
 
 ***
+
+Removed the --small-gui build option, starting Wesnoth with the --smallgui
+parameter achieves the same.
+
+***
